--- a/src/styles.css
+++ b/src/styles.css
@@ -1,149 +1,55 @@
-.botao-direita {
-    border: 0;
-    line-height: 2.5;
-    padding: 0 20px;
-    font-size: 1rem;
-    text-align: center;
-    color: #fff;
-    text-shadow: 1px 1px 1px #000;
-    border-radius: 10px;
-    background-color: rgba(220, 0, 0, 1);
-    background-image: linear-gradient(to top left, rgba(0, 0, 0, .2), rgba(0, 0, 0, .2) 30%, rgba(0, 0, 0, 0));
-    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6), inset -2px -2px 3px rgba(0, 0, 0, .6);
+body {
+    background-image: url("img/bgSortingGame.png");
+    background-size: cover;
 }
 
-.botao-direita:hover {
-    background-color: rgba(255, 0, 0, 1);
-}
-
-.botao-direita:active {
-    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6), inset 2px 2px 3px rgba(0, 0, 0, .6);
-}
-
-.botao-esquerda {
-    border: 0;
-    line-height: 2.5;
-    padding: 0 20px;
-    font-size: 1rem;
-    text-align: center;
-    color: #fff;
-    text-shadow: 1px 1px 1px #000;
-    border-radius: 10px;
-    background-color: rgba(0, 120, 0, 1);
-    background-image: linear-gradient(to top left, rgba(0, 0, 0, .2), rgba(0, 0, 0, .2) 30%, rgba(0, 0, 0, 0));
-    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6), inset -2px -2px 3px rgba(0, 0, 0, .6);
-}
-
-.botao-esquerda:hover {
-    background-color: rgba(0, 155, 0, 1);
-}
-
-.botao-esquerda:active {
-    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6), inset 2px 2px 3px rgba(0, 0, 0, .6);
-}
-
-table {
-    left: 110px;
-    top: 310px;
-    border-collapse: collapse;
-    /* border: 1px solid black; */
+.botoes-dificuldade {
     position: absolute;
-    border-collapse: separate;
-    border-spacing: 0px 112px;
-    z-index: -1;
+    top: 50%;
+    left: 38%;
 }
 
-table.tr {
-    margin-top: 100px;
-}
-
-td {
-    width: 98px;
-    height: 157px;
-    /* border: 1px solid black; */
-    text-align: center;
-    vertical-align: center;
-    font-size: 18px;
+.custom-btn {
+    width: 300px;
+    height: 80px;
+    color: #fff;
+    border-radius: 5px;
+    padding: 10px 25px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 500;
+    background: transparent;
+    cursor: pointer;
+    transition: all 0.3s ease;
     position: relative;
-}
-
-.pixel-index {
-    font-size: 10px;
     display: inline-block;
+    box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, .5), 7px 7px 20px 0px rgba(0, 0, 0, .1), 4px 4px 5px 0px rgba(0, 0, 0, .1);
+    outline: none;
+    border: none;
+    overflow: hidden;
+    font-size: 60px;
+}
+
+.custom-btn:after {
     position: absolute;
-    top: 2px;
-    right: 2px;
-    color: #777;
+    content: " ";
+    z-index: -1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #1fd1f9;
+    background-image: linear-gradient(315deg, #1fd1f9 0%, #b621fe 74%);
+    transition: all 0.3s ease;
 }
 
-td.pixel {
-    width: 4px;
-    height: 4px;
-    border: 0;
+.custom-btn:hover {
+    background: transparent;
+    box-shadow: 4px 4px 6px 0 rgba(255, 255, 255, .5), -4px -4px 6px 0 rgba(116, 125, 136, .2), inset -4px -4px 6px 0 rgba(255, 255, 255, .5), inset 4px 4px 6px 0 rgba(116, 125, 136, .3);
+    color: #fff;
 }
 
-.esquerda {
-    background-color: #87fabd;
-}
-
-.direita {
-    background-color: #fa7e70;
-}
-
-#jogo.tremendo {
-    animation: shake 0.82s cubic-bezier(.36, .07, .19, .97) both;
-    transform: translate3d(0, 0, 0);
-    backface-visibility: hidden;
-    perspective: 1000px;
-}
-
-@keyframes shake {
-    10%,
-    90% {
-        transform: translate3d(-1px, 0, 0);
-    }
-    20%,
-    80% {
-        transform: translate3d(2px, 0, 0);
-    }
-    30%,
-    50%,
-    70% {
-        transform: translate3d(-4px, 0, 0);
-    }
-    40%,
-    60% {
-        transform: translate3d(4px, 0, 0);
-    }
-}
-
-.cabecalhoPrateleira {
-    background-image: url("img/headerPrateleira.png");
-    width: 1000px;
-    height: 380px;
-    background-size: cover;
-}
-
-.linhaPrateleira {
-    background-image: url("img/linhaPrateleira.png");
-    width: 1000px;
-    height: 263px;
-    background-size: cover;
-}
-
-.rodapePrateleira {
-    background-image: url("img/rodapePrateleira.png");
-    width: 1000px;
-    height: 206px;
-    background-size: cover;
-}
-
-.prateleira {
-    position: absolute;
-}
-
-#resposta {
-    position: absolute;
-    top: 1500px;
-    left: 400px;
+.custom-btn:hover:after {
+    -webkit-transform: scale(2) rotate(180deg);
+    transform: scale(2) rotate(180deg);
+    box-shadow: 4px 4px 6px 0 rgba(255, 255, 255, .5), -4px -4px 6px 0 rgba(116, 125, 136, .2), inset -4px -4px 6px 0 rgba(255, 255, 255, .5), inset 4px 4px 6px 0 rgba(116, 125, 136, .3);
 }
