--- a/src/styles.css
+++ b/src/styles.css
@@ -61,3 +61,16 @@ body {
     top: 30%;
     left: 40%;
 }
+
+.texto-explicativo {
+    width: 600px;
+    height: 600px;
+    border: 1px solid black;
+    border-radius: 15px;
+    position: absolute;
+    left: 1250px;
+    top: 100px;
+    color: black;
+    background-color: white;
+    padding: 15px;
+}
