--- a/src/hardStyles.css
+++ b/src/hardStyles.css
@@ -216,7 +216,7 @@ td.pixel {
     font-size: 25px;
 }
 
-<<<<<<< HEAD #balao-alerta {
+#balao-alerta {
     width: 200px;
     height: 100px;
     border: 1px solid black;
